<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pause_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pausemenu_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/pausemenu_resumeButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/pausemenu_resume"
            android:textSize="20dp" />

        <Button
            android:id="@+id/pausemenu_quitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pausemenu_quit_to_main"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>